User interaction with rendering on page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<h1>JS School Javascript Basics - Homeworks</h1>
-	<div class="task"><a href="task1-user-interaction/1-user-interaction.html">Task 1 - User interaction</a></div>	
+	<div class="task"><a href="task1-user-interaction/1-user-interaction(prompt,alert,confirm).html">Task 1 - User interaction with prompt, alert, confirm</a></div>
+	<div class="task"><a href="task1-user-interaction/1-user-interaction(page).html">Task 1.1 - User interaction rendering on page</a></div>	
 </body>
 </html>
